deployment/manifests/staging/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: ghcr.io/sebastianusk/warehousia-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '128Mi'
              cpu: '50m'
            limits:
              memory: '256Mi'
