deployment/manifests/staging/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 3333
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/sebastianusk/warehousia-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 3333
