deployment/manifests/staging/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - app.staging.warehousia.com
      secretName: admin-staging-tls
  rules:
  - host: app.staging.warehousia.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin
              port:
                number: 80
